# python-template

./: .editorconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: check-ruff.md  create-branch.md  pr.md
.devcontainer/: .env.example  Dockerfile  devcontainer-no-db.json  devcontainer.json  docker-compose-no-db.yml  docker-compose.yml  setup.sh  supervisord.conf
src/: alembic.ini
src/alembic/: README  env.py
src/alembic/versions/: 20251213_0445_f61bdb3b374e_init.py
src/core/: __init__.py  database.py
src/models/: __init__.py  base.py  user.py
tests/: conftest.py
tests/models/: test_base.py  test_user.py
