[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-dev-template"
version = "1.0.0"
description = "Python 3.14 development template with modern tooling"
readme = "README.md"
requires-python = ">=3.14"

[tool.ruff]
# Line length setting (slightly relaxed)
line-length = 120
target-version = "py314"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "src/alembic",
]

[tool.ruff.lint]
# Enabled rules (slightly relaxed settings)
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez (naive datetime禁止)
    "RUF", # Ruff-specific rules
]

# Ignored rules
ignore = [
    "E501",    # line too long (let ruff's formatter handle this)
    "RUF001",  # ambiguous unicode in strings (日本語コメント・文字列を許容)
    "RUF002",  # ambiguous unicode in docstrings (日本語docstringを許容)
    "RUF003",  # ambiguous unicode in comments (日本語コメントを許容)
    "B008",  # Do not perform function calls in argument defaults
    "B904",  # Use `raise ... from err`
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "E111",  # indentation is not a multiple of four
    "E114",  # indentation is not a multiple of four (comment)
    "E117",  # over-indented
]

# Per-file ignore settings
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
# Import sorting settings
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatter settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Docstring formatting
docstring-code-format = true
docstring-code-line-length = 100

# Ruff as primary tool (integrates Black/isort functionality)
# - Ruff: lint + format + import sorting
# - MyPy: type checking only (covers what Ruff doesn't)

[tool.mypy]
# MyPy settings (type checking only)
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_error_summary = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "build",
    "dist",
    "src/alembic",
]

[tool.pytest.ini_options]
# Pytest settings
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
# Coverage settings
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/dist/*",
    "*/build/*",
    "src/alembic/*",
]

[tool.coverage.report]
# Coverage report settings
precision = 2
show_missing = true
skip_covered = false
